[package]
name = "glimesh"
description = "Client for performing queries, mutations, and subscriptions against the Glimesh API."
version = "0.1.0"
authors = ["James Birtles <jamesb@airca.st>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["glimesh", "graphql"]
categories = ["api-bindings", "asynchronous", "web-programming::websocket", "web-programming::http-client"]
repository = "https://github.com/AircastDev/glimesh-rs"

[features]
default = ["http"]
http = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
graphql_client = "0.9"
serde = "1.0"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1.0"
parking_lot = "0.11"
chrono = "0.4"

[dev_dependencies]
tokio = { version = "1.4", features = ["full"] }